tests/baselines/reference/incrementAndDecrement.errors.txt
<<<<<<< HEAD
incrementAndDecrement.ts(5,9): error TS2095: Could not find symbol 'window'.
incrementAndDecrement.ts(8,1): error TS2130: Invalid left-hand side of assignment expression.
incrementAndDecrement.ts(11,1): error TS2130: Invalid left-hand side of assignment expression.
incrementAndDecrement.ts(14,1): error TS2130: Invalid left-hand side of assignment expression.
incrementAndDecrement.ts(17,1): error TS2130: Invalid left-hand side of assignment expression.
incrementAndDecrement.ts(24,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(25,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(26,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(27,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(34,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(35,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(36,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(37,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(44,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(45,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(46,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(47,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(55,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(56,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(57,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
incrementAndDecrement.ts(58,3): error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
=======
==== tests/cases/compiler/incrementAndDecrement.ts (21 errors) ====
    enum E { A, B, C };
    var x = 4;
    var e = E.B;
    var a: any;
    var w = window;
            ~~~~~~
!!! error TS2095: Could not find symbol 'window'.
    
    // Assign to expression++
    x++ = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to expression--
    x-- = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to++expression
    ++x = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to--expression
    --x = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Pre and postfix++ on number
    x++;
    x--;
    ++x;
    --x;
    ++x++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --x--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++x--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --x++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // Pre and postfix++ on enum
    e++;
    e--;
    ++e;
    --e;
    ++e++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --e--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++e--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --e++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    // Pre and postfix++ on value of type 'any'
    a++;
    a--;
    ++a;
    --a;
    ++a++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --a--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++a--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --a++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    
    // Pre and postfix++ on other types
    w++; // Error
    w--; // Error
    ++w; // Error
    --w; // Error
    ++w++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --w--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    ++w--; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    --w++; // Error
      ~~~
!!! error TS2139: The operand of an increment or decrement operator must be a variable, property or indexer.
    
    
    
>>>>>>> b9bbbf1... Improve error baseline reporting
